# holholhol

./: .env.example  .gitignore  BACKEND_SCALE_WORKPLAN.md  BACKEND_UPGRADE_WORK_PLAN.md  BETA_TEST_REPORT.md  CLAUDE.md  CODE_INSPECTION_REPORT.md  CODE_INSPECTION_REPORT_2026-01-20.md  CODE_REVIEW_IMPROVEMENT_PLAN.md  DEPOSIT_WITHDRAWAL_PROGRESS 2.md  DEPOSIT_WITHDRAWAL_PROGRESS.md  HANDOVER_2026-01-14.md  HANDOVER_2026-01-15.md  IMPLEMENTATION_STATUS.md  MASTER_WORK_PLAN.md  PROGRESS_CHECKPOINT.md  QUICKSTART.md  README.md  WORKPLAN_IMPLEMENTATION.md  WORK_PLAN_README.md  docker-compose.dev.yml  ecosystem.config.cjs  frontend-audit-report 2.html  run-dev-servers.sh
admin-backend/: .env.example  Dockerfile  alembic.ini  create_admin_user.py  pyproject.toml  requirements.txt  start_dev 2.sh
admin-backend/.hypothesis/constants/: 02d28ad52df5e9ca  049e8bb2463cfaaa  06ca0f7ba73de2ca  0767ccbfa07b1bfc  07b59ca54e031ba6  08147208ed6e32be  0c4b2477a2ef7104  0c9db7a369ec2299  1759d2eac162544d  208a8f954950fcec  219aca6c1b1f6afd  2290a84e37a2dc57  233d2bbe8bb4cc19  24bbca94fa79ced2  2657a25e8c05141e  2699868c6e12e18e  2b34b588f03de091  2c313b04b62d1887  2e01371651f349e1  303396939e34c19d  34e645e858a5f9a6  (+38 more)
admin-backend/alembic/: env.py
admin-backend/app/: __init__.py  config.py  database.py  main.py
admin-backend/tests/: conftest.py
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  start_dev.sh
backend/alembic/: env.py
backend/app/: __init__.py  config.py  logging_config.py  main.py
backend/scripts/: verify_migrations.py
(+665 files in other folders)
